[gd_scene load_steps=12 format=2]

[ext_resource path="res://OrchardScene.gd" type="Script" id=1]
[ext_resource path="res://GroundTileset.tres" type="TileSet" id=2]
[ext_resource path="res://sprites/other sprites/orchard background.png" type="Texture" id=3]
[ext_resource path="res://sprites/other sprites/man cow.png" type="Texture" id=4]
[ext_resource path="res://sprites/other sprites/man pig.png" type="Texture" id=5]
[ext_resource path="res://sprites/other sprites/dead body.png" type="Texture" id=6]
[ext_resource path="res://sprites/other sprites/protestor1.png" type="Texture" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://TextFont2.tres" type="DynamicFont" id=9]
[ext_resource path="res://bgMusic/TopEmotionalOstsOfAllTimes.ogg" type="AudioStream" id=10]
[ext_resource path="res://AudioStreamPlayer.gd" type="Script" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 639.701, 361.603 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 393205, 12, 0, 393206, 12, 0, 393207, 12, 0, 393208, 12, 0, 393209, 12, 0, 393210, 12, 0, 393211, 12, 0, 393212, 12, 0, 393213, 12, 0, 393214, 12, 0, 393215, 12, 0, 327680, 12, 0, 327681, 12, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 12, 0, 327689, 12, 0, 327690, 12, 0 )

[node name="orchard background" type="Sprite" parent="."]
position = Vector2( 640, 352 )
scale = Vector2( 1, 0.975551 )
texture = ExtResource( 3 )

[node name="man cow" type="Sprite" parent="."]
position = Vector2( 448, 624 )
scale = Vector2( 1.88725, 1.9871 )
texture = ExtResource( 4 )

[node name="man pig" type="Sprite" parent="."]
position = Vector2( 176, 528 )
scale = Vector2( 1.00781, 0.851563 )
texture = ExtResource( 5 )

[node name="dead body" type="Sprite" parent="."]
position = Vector2( 464, 528 )
scale = Vector2( 1.38177, 1.13653 )
texture = ExtResource( 6 )

[node name="Textbox Texture" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 458758, 13, 0, 458759, 13, 0, 458760, 13, 0, 458761, 13, 0, 458762, 13, 0, 458763, 13, 0, 524294, 13, 0, 524295, 13, 0, 524296, 13, 0, 524297, 13, 0, 524298, 13, 0, 524299, 13, 0, 589830, 13, 0, 589831, 13, 0, 589832, 13, 0, 589833, 13, 0, 589834, 13, 0, 589835, 13, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 304, 574.349 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 44.6848, 600.509 )
scale = Vector2( 1.2, 1.2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 720, 592 )

[node name="Label" type="Label" parent="."]
margin_left = 464.0
margin_top = 656.0
margin_right = 770.0
margin_bottom = 691.0

[node name="DialogueBox" type="RichTextLabel" parent="."]
margin_left = 400.0
margin_top = 464.0
margin_right = 752.0
margin_bottom = 624.0
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
script = ExtResource( 11 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 1280, 600 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
